src/snapshots/heave__tests__read_only@all_read_only.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/read_only/all_read_only.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            hurl_path: "/pets",
            oas_path: "/pets",
            oas_operation_id: Some(
                "addPet",
            ),
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
                "#jsonpath \"$.B\" isCollection",
                "#jsonpath \"$.B.name\" isString",
                "#jsonpath \"$.name\" isString",
            ],
            request_body_parameter: "",
        },
    ],
    diagnostics: [],
}
