src/snapshots/heave__tests__write_only@all_read_only.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/write_only/all_read_only.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            path: "/pets",
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [],
            request_body_parameter: "{\n  \"B\": {\n    \"name\": \"\"\n  },\n  \"name\": \"\"\n}",
        },
    ],
    diagnostics: [],
}
